data/derived/sp14/progs/unify/prog1877.ml.out
Characters 82-136:
  ( l1, List.append( clone 0 ((List.length l1) - (List.length l2)), l2  ))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
